2001-01-17  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(pthread_gnome_vfs_async_cancel):
	Fix a typo (g_mutex_lock->g_mutex_unlock) that caused a race
	condition where async callbacks could have been scheduled after
	a cancellation.
	
	* libgnomevfs-pthread/gnome-vfs-job.c:
	(execute_load_directory_not_sorted):
	Whitespace tweak.

2001-01-16  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs-pthread/gnome-vfs-job.c:
	(dispatch_load_directory_callback),
	(gnome_vfs_shared_directory_list_unref),
	(execute_load_directory_not_sorted):
	Fix several crashes when load directory hits an error and ends
	up with an empty directory list.
	
	* test/test-async-cancel.c: (directory_load_failed_callback),
	(test_load_directory_fail), (main):
	Add a test to the test rig that catches the bug I fixed.
	

2001-01-16  Seth Nickell  <seth@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-application-registry.c: (get_keys_foreach),
	(gnome_vfs_application_registry_get_applications):
	* libgnomevfs/gnome-vfs-mime-info.c: (mime_list_sort):
	
	Add casts to strcmp's performed on gpointers so they will
	not generate warnings.
2001-01-16  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>
	
	Fix 5399: Callbacks need a better way to find out if they are still needed.
	Fix 5401: Decouple async jobs and callbacks.
	Fix 5402: DGnomeVFSAsyncJob cleanup needs to be simplified.
	Fix 5677: File copy operation crashes Nautilus.
	Fix 1129: Storage leak while cancelling an async operation.

	* libgnomevfs-pthread/Makefile.am:
	* libgnomevfs-pthread/gnome-vfs-async-job-map.c:
	(gnome_vfs_async_job_map_get_job),
	(gnome_vfs_async_job_map_add_job),
	(gnome_vfs_async_job_map_remove_job),
	(gnome_vfs_async_job_map_destroy), (gnome_vfs_async_job_completed),
	(gnome_vfs_async_job_map_shutdown), (gnome_vfs_async_job_map_lock),
	(gnome_vfs_async_job_map_unlock),