@@ -1,3 +1,9 @@
+2001-01-17  Ian McKellar  <ian@eazel.com>
+
+	* test/test-dirop.c: (main):
+	Allow the initial permissions for a directory to be
+	specified on the test tool command line.
+
 2001-01-17  Pavel Cisler  <pavel@eazel.com>
 
 	reviewed by: Darin Adler <darin@eazel.com>
